--- a/Project.toml
+++ b/Project.toml
@@ -1,4 +1,4 @@
-name = "LINDO"
+name = "Lindoapi"
 uuid = "c0db8ab0-58e9-46b6-bd51-e77d1c638a2c"
 authors = ["JHaasIII92 <31041229+JHaasIII92@users.noreply.github.com>"]
 version = "0.4.1"
