--- a/Project.toml
+++ b/Project.toml
@@ -12,5 +12,6 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 
 [compat]
+MathOptInterface = "0.9"
 CEnum = "0.3, 0.4"
 julia = "1"
