--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,15 @@
 name = "Lindoapi"
 uuid = "5d56408f-8135-48b9-8e3b-17d984397714"
-authors = ["JHaasIII92 <31041229+JHaasIII92@users.noreply.github.com>"]
 version = "1.0.0"
+repo = "https://github.com/lindosystems/lindoapi.jl"
 
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 MathOptInterface = "b8f27783-ece8-5eb3-8dc8-9495eed66fee"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+
+[compat]
+julia = "1.6"
+CEnum = "0.4"
+MathOptInterface = "1.8"
